Add stone brick variants to blocks.properties

--- a/src/main/resources/blocks.properties
+++ b/src/main/resources/blocks.properties
@@ -222,6 +222,10 @@
 97:4=minecraft:infested_cracked_stone_bricks
 97:5=minecraft:infested_chiseled_stone_bricks
 98=minecraft:stone_bricks
+98:1=minecraft:mossy_stone_bricks
+98:2=minecraft:cracked_stone_bricks
+98:3=minecraft:chiseled_stone_bricks
+98:4=minecraft:stone_bricks
 99=minecraft:brown_mushroom_block
 100=minecraft:red_mushroom_block
 101=minecraft:iron_bars
