Add missing blocks to blocks.properties and merge.properties

--- a/src/main/resources/blocks.properties
+++ b/src/main/resources/blocks.properties
@@ -367,7 +367,9 @@
 160:14=minecraft:red_stained_glass_pane
 160:15=minecraft:black_stained_glass_pane
 161=minecraft:acacia_leaves
+161:1=minecraft:dark_oak_leaves
 162=minecraft:acacia_log
+162:1=minecraft:dark_oak_log
 163=minecraft:acacia_stairs
 164=minecraft:dark_oak_stairs
 165=minecraft:slime_block
@@ -379,6 +381,21 @@
 169=minecraft:sea_lantern
 170=minecraft:hay_block
 171=minecraft:white_carpet
+171:1=minecraft:orange_carpet
+171:2=minecraft:magenta_carpet
+171:3=minecraft:light_blue_carpet
+171:4=minecraft:yellow_carpet
+171:5=minecraft:lime_carpet
+171:6=minecraft:pink_carpet
+171:7=minecraft:gray_carpet
+171:8=minecraft:light_gray_carpet
+171:9=minecraft:cyan_carpet
+171:10=minecraft:purple_carpet
+171:11=minecraft:blue_carpet
+171:12=minecraft:brown_carpet
+171:13=minecraft:green_carpet
+171:14=minecraft:red_carpet
+171:15=minecraft:black_carpet
 172=minecraft:terracotta
 173=minecraft:coal_block
 174=minecraft:packed_ice
@@ -497,6 +514,36 @@
 248=minecraft:green_glazed_terracotta
 249=minecraft:red_glazed_terracotta
 250=minecraft:black_glazed_terracotta
-251=minecraft:concrete
-252=minecraft:concrete_powder
+251=minecraft:white_concrete
+251:1=minecraft:orange_concrete
+251:2=minecraft:magenta_concrete
+251:3=minecraft:light_blue_concrete
+251:4=minecraft:yellow_concrete
+251:5=minecraft:lime_concrete
+251:6=minecraft:pink_concrete
+251:7=minecraft:gray_concrete
+251:8=minecraft:light_gray_concrete
+251:9=minecraft:cyan_concrete
+251:10=minecraft:purple_concrete
+251:11=minecraft:blue_concrete
+251:12=minecraft:brown_concrete
+251:13=minecraft:green_concrete
+251:14=minecraft:red_concrete
+251:15=minecraft:black_concrete
+252=minecraft:white_concrete_powder
+252:1=minecraft:orange_concrete_powder
+252:2=minecraft:magenta_concrete_powder
+252:3=minecraft:light_blue_concrete_powder
+252:4=minecraft:yellow_concrete_powder
+252:5=minecraft:lime_concrete_powder
+252:6=minecraft:pink_concrete_powder
+252:7=minecraft:gray_concrete_powder
+252:8=minecraft:light_gray_concrete_powder
+252:9=minecraft:cyan_concrete_powder
+252:10=minecraft:purple_concrete_powder
+252:11=minecraft:blue_concrete_powder
+252:12=minecraft:brown_concrete_powder
+252:13=minecraft:green_concrete_powder
+252:14=minecraft:red_concrete_powder
+252:15=minecraft:black_concrete_powder
 255=minecraft:structure_block
